k8s/ingress_controller/default_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-default
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: study.nzhussup.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: freestudydrive-service
            port:
              number: 777
  - host: kanban-api.nzhussup.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kanban-service
            port:
              number: 8080
  tls:
  - hosts:
    - study.nzhussup.com
    - kanban-api.nzhussup.com
    secretName: default-tls
