k8s/ingress_controller/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-ports
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 22
    - port: 80
    - port: 443
  egress:
  - to:
    - podSelector: {}
    ports:
    - port: 22
    - port: 80
    - port: 443
